--- a/styles.css
+++ b/styles.css
@@ -1,141 +1,144 @@
 body {
-    background-image: url("https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1668&q=80");
-    background-color: #cccccc;
-     }
-
-nav{
-   font-size: 35px;
-   
+  background-image: url("https://images.unsplash.com/photo-1531265726475-52ad60219627?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1668&q=80");
+  background-color: #cccccc;
 }
 
-.contact-font{
-    font-size: 15px;
-    color:lightgrey;
-    
+nav {
+  font-size: 35px;
 }
 
-.port-font{
-    font-size: 15px;
-    color:lightgrey;
-   
+.contact-font {
+  font-size: 15px;
+  color: lightgrey;
 }
 
-.about-font{
-    font-size: 15px;
-    color:white;
+.port-font {
+  font-size: 15px;
+  color: lightgrey;
 }
 
-.name-big{
-    background-color:lightsteelblue;
-    font-family:'Lato', sans-serif; 
-    color:slategrey;
-    padding-right:10px;
-    padding-left:10px;
- 
+.about-font {
+  font-size: 15px;
+  color: white;
 }
 
-.head-font{
-    background-color:black;
-    text-align: center;
-
+.name-big {
+  background-color: lightsteelblue;
+  font-family: "Lato", sans-serif;
+  color: slategrey;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
-.about-me{
-    color:lightsteelblue;
-    font-size: 30px;
-    font-family:'Lato', sans-serif; 
-    border-bottom: 1px solid white;
+.head-font {
+  background-color: black;
+  text-align: center;
 }
 
-.about-me-text{
-font-family: 'Lato', sans-serif; 
-color:lightgrey;
+.about-me {
+  color: lightsteelblue;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  border-bottom: 1px solid white;
+}
 
+.about-me-text {
+  font-family: "Lato", sans-serif;
+  color: lightsteelblue;
+  padding-top: 50px;
+}
+
+.about-me-text2 {
+  font-family: "Lato", sans-serif;
+  color: lightsteelblue;
+}
+
+.front-endtxt {
+  margin-left: -40px;
+}
+
+#skills {
+  margin-left: -100px;
 }
 
 .container-md {
-margin-top:50px;
-margin-bottom: 80px;
-margin-right: 10%; 
-width:auto;
-margin-left: 50px;
-font-family:lato; 
-font-size: 20px
-} 
-
-#LJpic {height:250px;
-    width: 250px; 
-    margin-top: 10px; 
-    padding: 10px 10px;
+  margin-top: 50px;
+  margin-bottom: 80px;
+  margin-right: 10%;
+  width: auto;
+  margin-left: 50px;
+  font-family: lato;
+  font-size: 20px;
 }
 
-footer{
-    position: fixed;
-    left: 0px;
-    bottom: 0px; 
-    height: 50px;
-    width: 100%; 
-    background:slategrey;
-    border-top: 5px solid white;
-    opacity: .9;
+footer {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  height: 50px;
+  width: 100%;
+  background: slategrey;
+  border-top: 5px solid white;
+  opacity: 0.9;
 }
 
-.contact-me{
-    color:lightsteelblue;
-    font-size: 30px; 
-    font-family: "Lato", sans-serif; 
-    border-bottom: 1px solid white; 
-    
+.contact-me {
+  color: lightsteelblue;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  border-bottom: 1px solid white;
 }
 
-.contact-name{
-    color: lightgrey;
-    font-size: 20px; 
-    padding-top: 10px;
-    padding-bottom: 5px; 
-    font-family: "Lato", sans-serif; 
+.contact-name {
+  color: lightgrey;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  font-family: "Lato", sans-serif;
 }
 
-.email-text{
-    color: lightgrey;
-    font-size: 20px; 
-    padding-top: 10px;
-    font-family: "Lato", sans-serif; 
+.email-text {
+  color: lightgrey;
+  font-size: 20px;
+  padding-top: 10px;
+  font-family: "Lato", sans-serif;
 }
 
-.message-text{
-    color: lightgrey;
-    font-size: 20px; 
-    padding-top: 10px;
-    font-family: "Lato", sans-serif; 
+.message-text {
+  color: lightgrey;
+  font-size: 20px;
+  padding-top: 10px;
+  font-family: "Lato", sans-serif;
 }
 
-.btn{
-    margin-bottom: 20px;
-    color: white;
-    font-family: "Lato", sans-serif; 
+.btn {
+  margin-bottom: 20px;
+  color: white;
+  font-family: "Lato", sans-serif;
 }
 
-.portfolio-me{
-    color:lightsteelblue;
-    font-size: 30px; 
-    font-family: "Lato", sans-serif; 
-    border-bottom: 1px solid white; 
-    
+.portfolio-me {
+  color: lightsteelblue;
+  font-size: 30px;
+  font-family: "Lato", sans-serif;
+  border-bottom: 1px solid white;
 }
 
-#space-tree{
-    padding-top: 5px;
-    padding-bottom:5px; 
-    
+.austin-img {
+  padding: 10px;
 }
 
-#shooting-sky{
-    padding-top: 5px;
-    padding-bottom: 5px;
+#skills {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-#ice-road{
-    padding-top: 5px;
-    padding-top: 5px; 
+.thumbnail {
+  height: 200px;
+  height: 300px;
+  padding: 10px 10px 10px 10px;
+}
+
+.my-col {
+  padding: 57px 20px 10px 10px;
 }
